# ragops

./: .env  .env.example  .gitignore  README.md  README_advanced_jira_issue_rag_openai_gemini.md  README_architecture.md  README_flow_explained.md  README_ia_copilot_no_desenvolvimento.md  README_roadmap_app.md  README_technical_debt.md  README_techniques.md  ROADMAP_article_analysis.md  api-project-1013904049487-6e93ee01f950.json  commands.md  docker-compose.yml  preciso que vc crie no meu dashboard, um.txt  pyproject.toml  requirements.txt  tmp_article_extract.txt
.tmp/: serve-8000-explicit.py  serve-8001.py  serve-8004.py
artigo/: APRESENTACAO_RAG_AINDA_E_NECESSARIO.md  GUIA_DE_FALA_FROM_TOKENS_TO_RAG.md  GUIA_DE_FALA_RAG_AINDA_E_NECESSARIO.md  README_from_tokens_to_rag.md  README_rag_ainda_e_necessario.md
dashboard/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
examples/: golden_dataset.json
prompts/: article_analysis.json  article_analysis.md  check_completeness.json  check_completeness.md  code_explain.md  code_extend.md  code_new_file.md  code_single.md  detect_contradictions.json  detect_contradictions.md  enrich_topics.md  expand_topic.md  explain_node.md  extract_issue_facts.json  extract_issue_facts.md  ieee_paper.md  interview_links.md  judge_bug.json  judge_bug.md  knowledge_ask.md  linkedin_post.md  presentation_mode.md  qa_single.md  roadmap_chat.md  roadmap_expand.md  roadmap_generate.md  roadmap_validate_refs.md  teaching_studio.md  topic_code_examples.md  topic_examples.md  triage_test.json  triage_test.md
scripts/: compact-docker-vhd.bat  migrate_roadmaps.py  (+3 more)
(+186 files in other folders)
